<resources>
    <string name="app_name">北京安监</string>
    <string name="toast_network_error">网络连接错误</string>
    <string name="user_name">用户名</string>
    <string name="passwords">密码</string>
    <string name="btn_pic_upload_text">上传图片</string>
    <string name="change_address">修改地址</string>
    <string name="change_address_ok">确定</string>

    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="str_admin_main_city">全市数据统计</string>
    <string name="str_admin_all_town">各县区数据统计</string>
    <string name="tv_bottom_text">通过全流程无纸化办理业务，减少办事企业跑路次数6000次，通过数据共享减少企业填报2,7452项。</string>
    <string name="fragment_message_title">消息动态</string>
    <string name="project_info_title">工程信息</string>
    <string name="check_look">查看</string>
    <string name="et_local_observer">地基与基础</string>
    <string name="local_search">查询</string>
    <string name="content_empty">内容为空</string>
    <string name="task_num">任务编号</string>
    <string name="check_date">检查日期</string>
    <string name="check_person">检查人</string>
    <string name="check_yiju">检查依据</string>
    <string name="check_result">检查结果</string>
    <string name="safe_type">安全指标类别</string>
    <string name="project_danti">工程单体</string>
    <string name="check_part">检查部位</string>
    <string name="safe_check_point">安全检查点</string>
    <string name="qzjx_01">设备登记编号</string>
    <string name="qzjx_02">设备名称 (类型)</string>
    <string name="qzjx_03">设备型号</string>
    <string name="qzjx_04">设备使用登记编号</string>
    <string name="qzjx_05">是否已注销</string>
    <string name="jsj_01">单体名称</string>
    <string name="jsj_02">产品名称</string>
    <string name="jsj_03">产品型号</string>
    <string name="jsj_04">检测时间</string>
    <string name="jsj_05">检测结论</string>
    <string name="jsj_06">是否已拆除</string>
    <string name="check">查看</string>
    <string name="supervision_plan_alter01">含有超过一定规模的危险性较大的分部分项工程情况：</string>

</resources>
