<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_10"
    android:background="@color/white"
    >
    <LinearLayout
        android:id="@+id/ll_jsj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_main_color"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jsj_01"
                android:drawableLeft="@drawable/qzjx_loggo"
                android:drawablePadding="@dimen/dp_4"
                />
            <TextView
                android:id="@+id/tv_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jsj_02"
                android:drawableLeft="@drawable/qzjx_loggo"
                android:drawablePadding="@dimen/dp_4"
                />
            <TextView
                android:id="@+id/tv_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jsj_03"
                android:drawableLeft="@drawable/qzjx_loggo"
                android:drawablePadding="@dimen/dp_4"
                />
            <TextView
                android:id="@+id/tv_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jsj_04"
                android:drawableLeft="@drawable/qzjx_loggo"
                android:drawablePadding="@dimen/dp_4"
                />
            <TextView
                android:id="@+id/tv_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jsj_05"
                android:drawableLeft="@drawable/qzjx_loggo"
                android:drawablePadding="@dimen/dp_4"
                />
            <TextView
                android:id="@+id/tv_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jsj_06"
                android:drawableLeft="@drawable/qzjx_loggo"
                android:drawablePadding="@dimen/dp_4"
                />
            <TextView
                android:id="@+id/tv_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>