<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/dp_4"
    android:background="@color/white"
    app:cardElevation="@dimen/dp_5"
    app:cardCornerRadius="@dimen/dp_5"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <jp.shts.android.library.TriangleLabelView
            android:id="@+id/tlv_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            app:backgroundColor="@color/main_color"
            app:corner="leftTop"
            app:labelBottomPadding="5dp"
            app:labelCenterPadding="0dp"
            app:labelTopPadding="10dp"
            app:primaryText="1"
            app:primaryTextColor="@color/white"
            app:primaryTextSize="16sp"
            app:secondaryTextColor="@color/white"
            app:secondaryTextSize="11sp" />
        <TextView
            android:id="@+id/tv_flag01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe_type"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_40"
            android:textColor="@color/admin_main_select_text"
            android:textSize="@dimen/sp_admin_main_03"            />
        <TextView
            android:id="@+id/tv_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_flag01"
            />
        <TextView
            android:id="@+id/tv_flag02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/safe_check_point"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_below="@+id/tv_flag01"
            android:textColor="@color/admin_main_select_text"
            android:textSize="@dimen/sp_admin_main_03"
            />
        <TextView
            android:id="@+id/tv_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_toRightOf="@+id/tv_flag02"
            android:layout_below="@+id/tv_01"
            android:textColor="@color/main_color"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="@dimen/sp_admin_main_03"
            />
        <TextView
            android:id="@+id/tv_flag03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_danti"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_below="@+id/tv_flag02"
            android:textColor="@color/admin_main_select_text"
            android:textSize="@dimen/sp_admin_main_03"

            />
        <TextView
            android:id="@+id/tv_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_flag03"
            android:layout_below="@+id/tv_flag02"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_centerVertical="true"
            />
        <TextView
            android:id="@+id/tv_flag04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_part"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_below="@+id/tv_flag03"
            android:layout_marginBottom="@dimen/dp_5"
            android:textColor="@color/admin_main_select_text"
            android:textSize="@dimen/sp_admin_main_03"

            />
        <TextView
            android:id="@+id/tv_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_flag04"
            android:layout_below="@+id/tv_flag03"
            android:layout_marginBottom="@dimen/dp_5"
            android:textColor="@color/admin_main_select_text"
            android:textSize="@dimen/sp_admin_main_03"
            />
        <View
            android:id="@+id/view01_flag"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/light_gray"
            android:layout_below="@+id/tv_04"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_1"
            />
        <RadioGroup
            android:id="@+id/rg_basic"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view01_flag"
            >
            <RadioButton
                android:id="@+id/rb_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view01_flag"
                android:text="未见异常"
                android:layout_marginLeft="@dimen/dp_10"
                />
            <RadioButton
                android:id="@+id/rb_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view01_flag"
                android:text="问题项"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@+id/cb_01"/>

        </RadioGroup>
        <EditText
            android:id="@+id/et_issue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/shape_round_gray_bored"
            android:gravity="top|left"
            android:hint="请输入问题内容"
            android:padding="@dimen/dp_4"
            android:layout_margin="@dimen/dp_4"
            android:layout_below="@+id/rg_basic"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tv_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="语音输入"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/view01_flag"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_10"
            android:textColor="@color/main_color"
            android:visibility="gone"
            />
    </RelativeLayout>
</android.support.v7.widget.CardView>