<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <include
            layout="@layout/my_include_title"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:background="@color/light_gray"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/task_num"
                android:textSize="@dimen/sp_admin_main_03"
                />
            <EditText
                android:id="@+id/et_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_round_gray_bored"
                android:textSize="@dimen/sp_admin_main_03"
                android:layout_marginRight="@dimen/dp_20"
                android:padding="@dimen/dp_5"

                />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_5"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/check_date"
            android:textSize="@dimen/sp_admin_main_03"

            />
        <TextView
            android:id="@+id/tv_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_round_gray_bored"
            android:textSize="@dimen/sp_admin_main_03"
            android:layout_marginRight="@dimen/dp_20"
            android:padding="@dimen/dp_5"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_20"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/check_yiju"
                android:textSize="@dimen/sp_admin_main_03"

                />
            <RadioGroup
                android:id="@+id/rg_basic"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"

                android:layout_height="wrap_content" >
                <RadioButton
                    android:id="@+id/rb_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="计划"
                    android:layout_marginRight="@dimen/dp_10"
                    />
                <RadioButton
                    android:id="@+id/rb_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                    android:text="专项"/>
                <RadioButton
                    android:id="@+id/rb_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="其他"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_20"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/check_person"
                android:textSize="@dimen/sp_admin_main_03"

                />

            <TextView
                android:id="@+id/tv_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/sp_admin_main_03" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_admin_main_02"
            android:text="检查内容"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            />
            <TextView
                android:id="@+id/tv_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="添加"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_admin_main_02"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:background="@drawable/shape_main_color_select"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/main_color"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                >
            </android.support.v7.widget.RecyclerView>
            <com.threehmis.bjaj.widget.EmptyLayout
                android:id="@+id/empty_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </com.threehmis.bjaj.widget.EmptyLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/white"
            android:text="提交"
            android:background="@drawable/shape_main_color_select"
            android:textSize="@dimen/sp_admin_main_02"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>